// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components > Tabs > TabContent renders without crashing with \`props.activeTab === 'tab1'\` 1`] = `
<TabContent
  activeTab="tab1"
  tag="div"
>
  <TabPane
    tabId="preIco"
    tag="div"
  >
    <Connect(Table)
      dataSource="preIco"
    />
    <Connect(Pages)
      dataSource="preIco"
    />
  </TabPane>
  <TabPane
    tabId="ico"
    tag="div"
  >
    <Connect(Table)
      dataSource="ico"
    />
    <Connect(Pages)
      dataSource="ico"
    />
  </TabPane>
</TabContent>
`;

exports[`components > Tabs > TabContent renders without crashing with \`props.activeTab === 'tab2'\` 1`] = `
<TabContent
  activeTab="tab2"
  tag="div"
>
  <TabPane
    tabId="preIco"
    tag="div"
  >
    <Connect(Table)
      dataSource="preIco"
    />
    <Connect(Pages)
      dataSource="preIco"
    />
  </TabPane>
  <TabPane
    tabId="ico"
    tag="div"
  >
    <Connect(Table)
      dataSource="ico"
    />
    <Connect(Pages)
      dataSource="ico"
    />
  </TabPane>
</TabContent>
`;
